# patterns

./: .pre-commit-config.yaml  README.md  pyproject.toml
abstract_factory/: main.py  pyproject.toml
abstract_factory/core/: crane.py  port.py  vehicle.py
abstract_factory/implementation/: cranes.py  ports.py  vehicles.py
adapter_decorator/: main.py
adapter_decorator/implementation/: adapter.py  decorator.py  translator.py  transliterator.py
bridge/: main.py
bridge/implementation/: connectors.py  entities.py
bridge/interfaces/: connector.py
builder/: main.py
builder/helpers/: image.py
builder/implementation/: builders.py  director.py
builder/interfaces/: builder.py
chain_of_responsibility/: main.py
chain_of_responsibility/implementation/: topic.py
command/: main.py
command/implementation/: command.py  layout.py  menu.py
command/interfaces/: protocol.py
mediator/: main.py
mediator/implementation/: controller.py  devices.py
mediator/interfaces/: mediator.py
prototype/: main.py
prototype/implementation/: dtos.py  mixins.py  prototypes.py  repository.py
prototype/interfaces/: protocol.py
proxy/: main.py
proxy/implementation/: image.py  proxy.py
state/: main.py
state/implementation/: states.py  transaction.py
state/interfaces/: state.py
template_method/: main.py
template_method/implementation/: children.py  parent.py
visitor/: main.py
visitor/implementation/: parcels.py  posts.py  printers.py
visitor/interfaces/: parcel.py  post.py
