[project]
name = "patterns"
version = "0.1.0"
description = "Programming patterns"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "ruff>=0.11.10",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"