[tool.poetry]
name = "abstract-factory"
version = "0.1.0"
description = ""
authors = ["57BBBears <seocreomail@gmail.com>"]
readme = "README.md"
packages = [{include = "abstract_factory"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
